# remove_pcl_outliers

./: CMakeLists.txt  package.xml
config/: parameters.yaml
launch/: remove_outliers.launch
src/: filtered_scene.cpp
